force-app/main/default/objects/User_Interactions__c/User_Interactions__c.object-meta.xml
<CustomObject>
    <label>User Interactions</label>
    <nameField>
        <label>User Interaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>