force-app/main/default/objects/User_Interactions__c/fields/Interaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Name__c</fullName>
    <label>Interaction Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>