force-app/main/default/objects/User_Interactions__c/fields/UI__c.field-meta.xml
<CustomField>
    <fullName>UI__c</fullName>
    <label>UI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>