force-app/main/default/objects/User_Interactions__c/fields/UI_Used__c.field-meta.xml
<CustomField>
    <fullName>UI_Used__c</fullName>
    <formula>Case( UI__c , &apos;Theme4d&apos;,&apos;Lightning&apos;,&apos;Theme4t&apos;,&apos;Mobile&apos;,&apos;Classic&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UI Used</label>
    <type>Text</type>
</CustomField>